# csv-diff-agent

./: .dockerignore  README.md  dockerfile  pyproject.toml
.github/workflows/: CD.yml
csv_diff_agent/: .env.sample  __init__.py  agent.py  prompt.py  requirements.txt
